adding HTML and CSS

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -1,19 +1,40 @@
-<!doctype html> 
-<html lang="en"> 
-<head> 
+	<!doctype html>
+	<html>
+	<head>
 	<meta charset="UTF-8" />
-	<title>Privacy Protector</title>
-	<script type="text/javascript" src="../framework/phaser.min.js"></script>
+	<title> Privacy Protector </title>
+	<script type="text/javascript"></script>
+	<script type="text/javascript" src="framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
 	<script type="text/javascript" src="js/homebase.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-</head>
-<body>
-
-	<script type="text/javascript">
-	</script>
-
-</body>
-</html>
+	</head>	
+	<body>
+	<div class="Box">
+	<h1>Privacy Protector</h1>
+	<ul>
+	<li>Viruses are rampant across the internet. Protect as many people's computers as best as you can with your special cursor. </li>
+	</ul>
+	<P>
+	<h1>Team</h1>
+	<h2>Programmers</h2>
+	<ul>
+	<li>Sebastian Shelley</li>
+	<li>Richard Mao</li>
+	</ul>
+	<p>
+	<ul>
+	<h2>Artists</h2>
+	<li>Gina Noh</li>
+	<li>Sydney Birakos</li>
+	<li>Jeffrey Liu</li>
+	</ul>
+	<P>
+	</div>
+	<p>
+	<OL>
+	<hr>
+	</body>
+	</HTML>	
