--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 	<meta charset="UTF-8" />
-	<title> Privacy Protector </title>
+	<title> Privacy Protector! </title>
 	<script type="text/javascript"></script>
 	<script type="text/javascript" src="framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
