--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/enemy.js"></script>
 	<script type="text/javascript" src="js/homebase.js"></script>
+	<script type="text/javascript" src="js/bullet.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
