HTML text game swap

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
+	<div id="Test">
+	</div>
+	<OL>
+	<hr>
 	<div class="Box">
 	<h1>Privacy Protector</h1>
 	<ul>
@@ -19,22 +23,13 @@
 	</ul>
 	<P>
 	<h1>Team</h1>
-	<h2>Programmers</h2>
 	<ul>
 	<li>Sebastian Shelley</li>
-	<li>Richard Mao</li>
-	</ul>
-	<p>
-	<ul>
-	<h2>Artists</h2>
+	<li>Richard Mao</li>	
 	<li>Gina Noh</li>
 	<li>Sydney Birakos</li>
 	<li>Jeffrey Liu</li>
 	</ul>
-	<P>
 	</div>
-	<p>
-	<OL>
-	<hr>
 	</body>
-	</HTML>	
+	</html>	
