Finished bomb PU.

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -11,6 +11,9 @@
 	<script type="text/javascript" src="js/homebase.js"></script>
 	<script type="text/javascript" src="js/PowerUp.js"></script>
 	<script type="text/javascript" src="js/bullet.js"></script>
+	<script type="text/javascript" src="js/Bomb.js"></script>
+	<script type="text/javascript" src="js/Turret.js"></script>
+	<script type="text/javascript" src="js/Explosion.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
