--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -13,6 +13,7 @@
 	<script type="text/javascript" src="js/bullet.js"></script>
 	<script type="text/javascript" src="js/Bomb.js"></script>
 	<script type="text/javascript" src="js/Turret.js"></script>
+	<script type="text/javascript" src="js/TurretGun.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
