--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -15,6 +15,8 @@
 	<script type="text/javascript" src="js/Turret.js"></script>
 	<script type="text/javascript" src="js/TurretGun.js"></script>
 	<script type="text/javascript" src="js/Explosion.js"></script>
+	<script type="text/javascript" src="js/HeavyEnemy.js"></script>
+	<script type="text/javascript" src="js/SpeedyEnemy.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
