New random enemy

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -17,6 +17,8 @@
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/HeavyEnemy.js"></script>
 	<script type="text/javascript" src="js/SpeedyEnemy.js"></script>
+	<script type="text/javascript" src="js/FakePowerup.js"></script>
+	<script type="text/javascript" src="js/RandomEnemy.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
