started adding font in, fixed replayability bugs

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
+	<span id="preload-font"></span>
 	<div id="Test">
 	</div>
 	<OL>
