Patch buff and quieter FX

--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="js/SpeedyEnemy.js"></script>
 	<script type="text/javascript" src="js/FakePowerup.js"></script>
 	<script type="text/javascript" src="js/RandomEnemy.js"></script>
+	<script type="text/javascript" src="js/MiniExplosion.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>	
 	<body>
