--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="../framework/phaser.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/player.js"></script>
-	<script type="text/javascript" src="js/enemy.js"></script>
+	<script type="text/javascript" src="js/Enemy.js"></script>
 	<script type="text/javascript" src="js/homebase.js"></script>
 	<script type="text/javascript" src="js/PowerUp.js"></script>
 	<script type="text/javascript" src="js/bullet.js"></script>
