--- a/privacy_game/index.html
+++ b/privacy_game/index.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src="js/Explosion.js"></script>
 	<script type="text/javascript" src="js/HeavyEnemy.js"></script>
 	<script type="text/javascript" src="js/SpeedyEnemy.js"></script>
-	<script type="text/javascript" src="js/FakePowerup.js"></script>
+	<script type="text/javascript" src="js/FakePowerUp.js"></script>
 	<script type="text/javascript" src="js/RandomEnemy.js"></script>
 	<script type="text/javascript" src="js/MiniExplosion.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
